--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <div class="location">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="80"
-                    height="80" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFEC33" fill="none"
+                    height="80" viewBox="0 0 24 24" stroke-width="2.5" stroke="#FFEC33" fill="none"
                     stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                     <path d="M9 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
@@ -54,7 +54,7 @@
                 <div class="icons">
 
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-code" width="40"
-                        height="40" viewBox="0 0 24 24" stroke-width="0.5" stroke="#177271" fill="none"
+                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#177271" fill="none"
                         stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path d="M7 8l-4 4l4 4" />
@@ -62,7 +62,7 @@
                         <path d="M14 4l-4 16" />
                     </svg>
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-javascript"
-                        width="40" height="40" viewBox="0 0 24 24" stroke-width="0.5" stroke="#177271" fill="none"
+                        width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#177271" fill="none"
                         stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
@@ -71,12 +71,12 @@
                             d="M16.5 8h-2.5a.5 .5 0 0 0 -.5 .5v3a.5 .5 0 0 0 .5 .5h1.423a.5 .5 0 0 1 .495 .57l-.418 2.93l-2 .5" />
                     </svg>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est, necessitatibus. Corrupti odit pariatur
-                    reiciendis,
-                    officiis mollitia ab cupiditate sint officia, nisi hic error similique voluptate nobis excepturi
-                    quos,
-                    adipisci
-                    saepe.</p>
+                <p>
+                    Soy un diseñador web con experiencia en HTML, CSS y JavaScript. Mi enfoque se centra en
+                    crear interfaces atractivas y funcionales, combinando habilidades técnicas con diseños
+                    estéticos. Me gusta convertir ideas en sitios web dinámicos y responsivos que cautiven a los
+                    usuarios y cumplan con los objetivos del cliente.
+                </p>
             </section>
 
             <section class="service">
@@ -84,7 +84,7 @@
                 <div class="icons">
 
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-react-native"
-                        width="40" height="40" viewBox="0 0 24 24" stroke-width="0.5" stroke="#177271" fill="none"
+                        width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#177271" fill="none"
                         stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path
@@ -103,7 +103,7 @@
                             d="M12.26 12.015h-.01c-.01 .13 -.12 .24 -.26 .24a.263 .263 0 0 1 -.25 -.26c0 -.14 .11 -.25 .24 -.25h-.01c.13 -.01 .25 .11 .25 .24" />
                     </svg>
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-angular"
-                        width="40" height="40" viewBox="0 0 24 24" stroke-width="0.5" stroke="#177271" fill="none"
+                        width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#177271" fill="none"
                         stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path
@@ -112,12 +112,11 @@
                         <path d="M10 13h4" />
                     </svg>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est, necessitatibus. Corrupti odit pariatur
-                    reiciendis,
-                    officiis mollitia ab cupiditate sint officia, nisi hic error similique voluptate nobis excepturi
-                    quos,
-                    adipisci
-                    saepe.</p>
+                <p>Soy un desarrollador front-end especializado en el uso de frameworks como React y Angular, con
+                    sólidos conocimientos en JavaScript y TypeScript. Apasionado por crear experiencias de usuario
+                    dinámicas y funcionales, me destaco en la implementación de interfaces interactivas y optimizadas
+                    para diversos dispositivos. Con experiencia en el diseño y desarrollo de aplicaciones web modernas,
+                    estoy siempre en busca de nuevas formas de mejorar la eficiencia y la calidad del código.</p>
             </section>
 
             <section class="service">
@@ -125,14 +124,14 @@
                 <div class="icons">
 
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-device-laptop"
-                        width="40" height="40" viewBox="0 0 24 24" stroke-width="0.5" stroke="#177271" fill="none"
+                        width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#177271" fill="none"
                         stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path d="M3 19l18 0" />
                         <path d="M5 6m0 1a1 1 0 0 1 1 -1h12a1 1 0 0 1 1 1v8a1 1 0 0 1 -1 1h-12a1 1 0 0 1 -1 -1z" />
                     </svg>
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-books" width="40"
-                        height="40" viewBox="0 0 24 24" stroke-width="0.5" stroke="#177271" fill="none"
+                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#177271" fill="none"
                         stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path d="M5 4m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v14a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z" />
@@ -145,12 +144,10 @@
                         <path d="M16 16l3.923 -.98" />
                     </svg>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est, necessitatibus. Corrupti odit pariatur
-                    reiciendis,
-                    officiis mollitia ab cupiditate sint officia, nisi hic error similique voluptate nobis excepturi
-                    quos,
-                    adipisci
-                    saepe.</p>
+                <p>Soy un profesor de informática con amplio dominio en ofimática, especializado en configuración,
+                    mantenimiento preventivo y correctivo de computadoras. Experto en programación básica utilizando
+                    Java y JavaScript, capacitado para enseñar de manera efectiva, objetiva y dinámica tanto a principiantes como a
+                    estudiantes más avanzados</p>
             </section>
         </div>
 
@@ -208,4 +205,5 @@
         document.getElementById("currentYear").innerHTML = currentYear;
     </script>
 </body>
+
 </html>
