--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="/assets/teacher-emoji.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +12,7 @@
     <script src="https://kit.fontawesome.com/750ba6d981.js" crossorigin="anonymous"></script>
     <link rel="preload" href="css/styles.css" as="style">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Profe Tachi 👨🏻‍🏫</title>
+    <title>Profe Tachi</title>
 </head>
 
 <body>
